Fix layout bug

--- a/frontend/components/css/header.module.css
+++ b/frontend/components/css/header.module.css
@@ -1,12 +1,13 @@
 .headers {
     background-color: #ffffff;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2);
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    height: 3rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     z-index: 100;
+    margin: 0;
+}
+
+.logo {
+    max-height: 10vh;
 }
