--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -20,8 +20,3 @@ a {
 a:hover {
 	text-decoration: none;
 }
-
-img {
-	max-width: 100%;
-	display: block;
-}
